# demo-iot-project

./: .dockerignore  .env.sample  .gitignore  Makefile  README.md  pyproject.toml
config/: admin_client.properties  kcat.conf
docker/: Dockerfile  README.md  docker-compose.yml
iac/: mtls.tf  pki.tf
kafka/: Makefile  README.md  jikkou-config.conf  jikkou-config.json  kafka-acls.yaml  kafka-topics.yaml
src/iot_sample/iot/: __init__.py  producer.py  reader.py  settings.py  state.py
src/iot_sample/iot/sensors/: __init__.py  emulated.py
src/iot_sample/lib/: __init__.py  logging.py
src/iot_sample/lib/kafka/: producer.py  serde.py  settings.py
src/iot_sample/lib/utility/: proto_tools.py
src/iot_sample/libexec/: server.py
src/iot_sample/routers/internal/: health.py
src/python/iot/: producer.py  state.py
src/python/iot/sensors/: emulated.py
src/python/lib/kafka/: serde.py
src/python/lib/utility/: proto_tools.py
src/python/libexec/: server.py
src/python/routers/internal/: health.py
src/python/routers/state/: status.py
src/python_tests/: __init__.py  conftest.py  test_iot_producer.py  test_iot_reader.py  test_iot_sensors.py  test_iot_settings.py  test_iot_state.py  test_lib_util_proto.py
terraform/: mtls.tf  pki.tf  providers.tf
