[project]
name = "iot-sample"
version = "0.1.0"
requires-python = ">= 3.12"

dependencies = [
    "protobuf>5,<6",
    "pydantic-settings>=2.4.0",
    "google>=3.0.0",
    "fastapi>=0.112.0",
    "confluent-kafka>=2.5.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "uvicorn[standard]>=0.30.6",
    "faker>=28.4.1",
    "websockets>=13.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "fastapi[standard]",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = []

line-length = 88
indent-width = 4

target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    "*_pb2.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]
